--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ a:hover::after {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8rem;
-  height: 86vh;
+  padding: 4rem 5rem 5rem 6rem;
+  height: 70vh;
 }
 
 .section__container {
@@ -363,4 +363,5 @@ a:hover::after {
   gap: 2rem;
   margin-left: 4rem;
   cursor: pointer;
+  color: black;
 }
