--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -137,8 +137,26 @@
 
   .swiper {
     padding: 2rem;
-    margin-left: 0;
+    margin-left: -2rem;
     gap: 1rem;
+  }
+
+  /* GALLERY SECTION */
+  #gallery {
+    padding: 1rem;
+    margin: 0;
+  }
+
+  .gallery-image {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 1rem;
+  }
+
+  .title-1s {
+    text-align: center;
+    padding-top: 4rem;
   }
 }
 
