--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@ a:hover::after {
   font-size: 40px;
   padding: 2rem 0 1.5rem;
   margin-left: 2rem;
+  margin-top: -3rem;
 }
 .menu-container {
   display: flex;
@@ -360,7 +361,61 @@ a:hover::after {
   justify-content: center;
   align-items: center;
   padding: 4rem;
-  gap: 2rem;
+  gap: 1rem;
   margin-left: 4rem;
   cursor: pointer;
+}
+
+.arrow {
+  text-align: center;
+  padding: 1rem;
+}
+
+.swipe {
+  border: 1px solid black;
+  border-radius: 100%;
+  color: black;
+  padding: 0.4rem;
+  font-size: 9px;
+}
+
+.swipe:hover {
+  color: white;
+  background-color: #fb6513;
+}
+
+/* GALLERY */
+
+#gallery {
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.image-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-right: 1rem;
+}
+
+.image-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-right: 1rem;
+}
+
+.image-3 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-right: 1rem;
+}
+.gallery-image {
+  display: flex;
+}
+
+.pic-con-1 {
+  border-radius: 0.5rem;
 }
