--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,20 +7,11 @@
   #hamburger-nav {
     display: flex;
     justify-content: space-between;
-    padding: 0 2rem;
+    padding-block: 2rem;
   }
 
   a:hover::after {
     width: 20%;
-  }
-
-  body {
-    background-image: url(./Assets/image\ 4.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 1015px;
   }
 
   #hero {
@@ -79,9 +70,9 @@
   }
 
   .about-container {
-    margin-left: 0.5rem;
     width: 300px;
-    height: 289px;
+    height: 300px;
+    margin-left: -2rem;
   }
 
   .border-left {
