--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "DM Sans", sans-serif;
-  background-image: url(./Assets/image\ 4.png);
-  background-repeat: no-repeat;
+.container {
+  font-family: "DM Sans", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+}
+
+.header-container {
+  background-image: url(./Assets/image-4.png);
+  background-position: center;
 }
 
 html {
@@ -39,9 +44,10 @@ nav,
 }
 
 nav {
+  display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  padding-block: 2rem;
 }
 
 .nav-links {
@@ -80,10 +86,8 @@ a:hover::after {
 }
 
 .logo {
-  width: fit-content;
-  height: 10vh;
   cursor: default;
-  align-items: center;
+  padding: 1rem;
 }
 
 .logo-pic {
@@ -113,7 +117,6 @@ a:hover::after {
   justify-content: center;
   align-items: center;
   padding: 4rem 5rem 5rem 6rem;
-  height: 70vh;
 }
 
 .section__container {
@@ -272,8 +275,7 @@ a:hover::after {
   background-color: white;
   padding: 1rem;
   border-color: white;
-  width: fit-content;
-  height: 310px;
+  height: 340px;
 }
 
 .about__pic-container {
@@ -285,7 +287,7 @@ a:hover::after {
 .border-left {
   border-left: 1px solid white;
   padding-left: 10px;
-  height: 270px;
+  height: 200px;
   transform: translateY(15%);
 }
 
