--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   font-family: "DM Sans", system-ui;
   font-optical-sizing: auto;
   font-weight: 400;
+  width: 100vw;
 }
 
 .header-container {
