--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -5,7 +5,7 @@
   }
 
   .container {
-    width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
   }
 
@@ -148,7 +148,7 @@
   /* GALLERY SECTION */
   #gallery {
     padding: 1rem;
-    margin: 0;
+    margin-bottom: 4rem;
   }
 
   .gallery-image {
@@ -161,6 +161,49 @@
   .title-1s {
     text-align: center;
     padding-top: 4rem;
+  }
+
+  /* CONTACT SECTION */
+
+  #contact {
+    padding: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .contact-card {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .map-pic {
+    width: 100vw;
+    padding: 1rem;
+    margin-top: -2rem;
+  }
+
+  .contact-details {
+    gap: 1rem;
+  }
+
+  /* Footer */
+
+  .nav-links-container {
+    padding: 0;
+    margin: 0;
+  }
+  .nav-container {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin-left: 0;
+
+    align-items: center;
+  }
+
+  .loc-add {
+    display: flex;
+    flex-direction: column;
   }
 }
 
