--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -205,6 +205,13 @@
     display: flex;
     flex-direction: column;
   }
+
+  /* footer */
+  .foot-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
 }
 
 /* @media screen and (max-width: 1200px) {
