--- a/style.css
+++ b/style.css
@@ -458,5 +458,61 @@ a:hover::after {
 
 footer {
   background-color: #fc540a;
+}
+
+.foot-container {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.location-container {
+  flex-direction: column;
+  gap: 1rem;
   color: white;
+  display: flex;
+}
+
+.location-container .loc {
+  color: wheat;
+}
+
+.location-container p {
+  color: white;
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.socials .loc {
+  color: wheat;
+}
+
+.socials .media {
+  color: white;
+  text-decoration: underline;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.links .loc {
+  color: wheat;
+}
+
+.links .dir {
+  color: #ebebeb;
+  text-decoration: underline;
+}
+
+.copy {
+  text-align: center;
+  color: white;
+  font-size: 10px;
 }
