--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,6 +7,7 @@
   .container {
     max-width: 100vw;
     overflow-x: hidden;
+    max-height: 100vh;
   }
 
   .header-container {
@@ -193,12 +194,7 @@
     margin: 0;
   }
   .nav-container {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    margin-left: 0;
-
-    align-items: center;
+    display: none;
   }
 
   .loc-add {
@@ -213,22 +209,3 @@
     gap: 2rem;
   }
 }
-
-/* @media screen and (max-width: 1200px) {
-  #desktop-nav {
-    display: none;
-  }
-
-  #hamburger-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5rem;
-    align-items: center;
-  }
-
-  #hero {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-  }
-} */
