embedded google map

--- a/style.css
+++ b/style.css
@@ -438,6 +438,19 @@ a:hover::after {
   align-items: center;
 }
 
+.google-map {
+  padding-bottom: 50%;
+  position: relative;
+}
+
+.google-map iframe {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+}
+
 .contact-details {
   display: flex;
   flex-direction: column;
